After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759620 - file-search: Do not recurse into ignored directory
file-search: Do not recurse into ignored directory
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-18 09:22 UTC by Thibault Saunier
Modified: 2015-12-21 23:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-search: Do not recurse into ignored directory (1.13 KB, patch)
2015-12-18 09:22 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2015-12-18 09:22:03 UTC
Otherwise we will be ignoring each file on by one taking resources uselessly
Comment 1 Thibault Saunier 2015-12-18 09:22:06 UTC
Created attachment 317614 [details] [review]
file-search: Do not recurse into ignored directory

Their might be a lot of things in there and we will anyway be ignoring
each and every file one by one in this case.
Comment 2 Christian Hergert 2015-12-18 21:21:33 UTC
Review of attachment 317614 [details] [review]:

LGTM
Comment 3 Christian Hergert 2015-12-21 23:38:07 UTC
Thanks! Fixed in master.