file-search: Do not recurse into ignored directory

Their might be a lot of things in there and we will anyway be ignoring
each and every file one by one in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=759620